--- a/VRChat/33/1333833.html
+++ b/VRChat/33/1333833.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "GKH1l319upaOT4xRxyJFLnZf+ftUw6YvddMpSED+S0Y="></script>
+    "PT9r8/skkou5M715XhBfKhCMwXek8EpjXh5ZNKtGJiU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC_アバター認証ドア","description":"VRChat用ワールドギミック「アバター認証ドア」です。\n特定のコライダーアニメーションを搭載したアバターを用いるとドアを開けることができます。詳しくは付属の説明書をご覧ください。\n後日，対応アバターと詳細な解説動画を公開します。\n\n　BOOTHからダウンロードしていただく場合は，zipファイルを解凍する必要があります。最近のWindowsは標準で解凍ソフトウェアが付属していると思いますが，右クリックとかでごちゃごちゃやっても開けない場合は「windows zipファイル　解凍」とかで検索してみてください。\n\n参考動画: https://twitter.com/eoseph/status/1114433244349390849\n解説動画　概要編: https://youtu.be/_YP7HaX2lbE","url":"https://booth.pm/ja/items/1333833","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"}}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GKH1l319upaOT4xRxyJFLnZf+ftUw6YvddMpSED+S0Y="></script>
+    nonce="PT9r8/skkou5M715XhBfKhCMwXek8EpjXh5ZNKtGJiU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -334,9 +334,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
