--- a/VRChat/58/1069758.html
+++ b/VRChat/58/1069758.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9T4oJt1YEu1rm1Dj3Qw5+Mj33WInuZwNbOEPjImHrbM="></script>
+    "rCkg+tXqp38j3hY7fwtNPsEoYPMK775l2sQjkbVOOpQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ワイヤーフレーム表示シェーダー【WireframeShader】","description":"通常版、Boost版とも中身は変わりません。\n[WireframeCamera]\nデプスカメラのレンダーテクスチャを使ってワイヤーフレームを計算します。カメラを使用しているためフレンド間でしか有効になりません。\n\"PlefabWireframeCamera\"をアバターの子にしてください。青い立方体の範囲が撮影範囲です。デフォルトでカメラはオフですが、Unityの再生ボタンを押すと有効になります(VRC上では有効になります)。\n①DepthTex:デプステクスチャを指定してください。(精度が悪いときはデプステクスチャの解像度を少し上げてください)\n②サンプル間隔:Unityの再生ボタンを押した後、確認しながら適当な数値に設定してください。\n③精度:Unityの再生ボタンを押した後、確認しながら適当な数値に設定してください。\n④背景色:背景の色です。\n⑤線の色:ワイヤーフレームの色です。\n\n[WireFrameNoCamera]\nグラブパスからワイヤーフレームを計算します。カメラを使用しないためフレンド以外でも有効ですが、Unlitなど一部シェーダーに対応していません。\n①サンプル間隔:確認しながら適当な数値に設定してください。\n②精度:確認しながら適当な数値に設定してください。\n③背景色:背景の色です。透明度も設定できます。\n④線の色:ワイヤーフレームの色です。透明度も設定できます。\n\n\n表示されるワイヤーフレームはいずれも計算の誤差があり、実際のポリゴンとは異なる場合があります。\n\n* by,HhotateA\n* Released under the MIT license\n* Twitter :HHOTATEA_VRC\n*\n* Date: 2018-10-27","url":"https://booth.pm/ja/items/1069758","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1069758/fbcd3377-06d0-4eff-b517-fd78fc429ff5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9T4oJt1YEu1rm1Dj3Qw5+Mj33WInuZwNbOEPjImHrbM="></script>
+    nonce="rCkg+tXqp38j3hY7fwtNPsEoYPMK775l2sQjkbVOOpQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -488,9 +488,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
