--- a/VRChat/42/1069342.html
+++ b/VRChat/42/1069342.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "nXmQ/IkVN4sG4BxS5xYJUoU3j4+swBiwyqvsQ0CBucw="></script>
+    "MznGQ7bHBN4C1+Saiccp0X5Ux/mUUn+4rLtp56C/tB4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"箱市展示物_剣","description":"箱市に出品していた剣です\n使用用途は考えてないよ\n\nスペック\nマテリアル：1\nポリゴン数：1492\nシェーダーはスタンダードシェーダを\nAlbedo / Metallic / Normal map\nの適用が必要です。\nNormal mapを入れた後に表示されるfix nowを忘れずに行ってください\n\n一応VRChatで使用するのを想定していますが、他の場所で使ってもらっても問題有りません。\n改変等自由に行ってOKです。\nある程度細かい規約はフォルダ内のReadMeに記載していく予定です。\n簡易規約\n商用利用：OK\n改変：OK\n\n再配布：NG\n特定の個人、集団に対する誹謗中傷、名誉棄損：NG\n\n利用上で不利益、トラブルが起こっても私は関知しませんし一切の責任を負いません。自己責任でお願いします。","url":"https://booth.pm/ja/items/1069342","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8254d2af-29c2-4f0d-b9b6-9ebf2add62f7/i/1069342/931f2d03-70b6-4202-889f-63c51e02b041_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nXmQ/IkVN4sG4BxS5xYJUoU3j4+swBiwyqvsQ0CBucw="></script>
+    nonce="MznGQ7bHBN4C1+Saiccp0X5Ux/mUUn+4rLtp56C/tB4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -336,9 +336,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
