--- a/VRChat/31/1069331.html
+++ b/VRChat/31/1069331.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "cC8FxCblMGKDGj5xRNvOH2lOIxEqAgX4EvxjKoGNNWs="></script>
+    "T8Ht0NSz8pI1fEDGTsgCx8wvEShOgSb8WTdxBnF6xiE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター向け】ミーシャ【FBX】","description":"Humanoid対応のオリジナルモデル「ミーシャ」です。\n\n主にVRChatでの使用を想定しています。\n揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。\n\nこの商品は\nUnity 2019.4.31f1\nで動作確認しております。\n\n","url":"https://booth.pm/ja/items/1069331","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/dd79cc1e-3556-435d-a17d-7b437ea1b30b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cC8FxCblMGKDGj5xRNvOH2lOIxEqAgX4EvxjKoGNNWs="></script>
+    nonce="T8Ht0NSz8pI1fEDGTsgCx8wvEShOgSb8WTdxBnF6xiE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -611,9 +611,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
