--- a/VRChat/69/1069069.html
+++ b/VRChat/69/1069069.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zRxGAMxXLkJ6id/fu87vOF3YgSD3sWaBNYidIGPZXFU="></script>
+    "SkjwrX2perTtY1iHjAoSFmcrYw6jBZw7PYKapCLZY4c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け「風鈴」","description":"風を音で心地よく知らせる夏の風物詩、風鈴です。\n(モデルに風鈴の音は入っていません)\n\nこの風鈴は主に個人がVRChatでアバターに装着したり、ワールドに置くことを想定しています。\n\n揺れもの用のボーンが入っているので、dynamicbone等の有償アセットを使用することで風鈴を揺らすことができます。\n\n風鈴が風に揺られているアニメーションが入っています。\n\nポリゴン数は642です。\n\n球体側面部と短冊のUV配列を整えているので自分で好きなガラス模様や文字を描くことができます。\n\nユニティパッケージになっています。","url":"https://booth.pm/ja/items/1069069","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1069069/2f21b60b-c49e-473c-8240-cbc66daed048_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zRxGAMxXLkJ6id/fu87vOF3YgSD3sWaBNYidIGPZXFU="></script>
+    nonce="SkjwrX2perTtY1iHjAoSFmcrYw6jBZw7PYKapCLZY4c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -405,9 +405,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
